# F44RedCoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libf44redcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  f44redcoin.sln  f44redcoin_config.h  libsecp256k1_config.h  msvc-autogen.py
ci/: test_run_all.sh
contrib/: README.md  f44redcoin-cli.bash-completion  f44redcoin-qt.pro  f44redcoin-tx.bash-completion  f44redcoind.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  f44redcoin-conf.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  f44redcoin-cli.1  f44redcoin-qt.1  f44redcoin-tx.1  f44redcoin-wallet.1  f44redcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  addrdb.cpp  (+150 more)
(+978 files in other folders)
