dist_man1_MANS=

if BUILD_F44REDCOIND
  dist_man1_MANS+=f44redcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=f44redcoin-qt.1
endif

if BUILD_F44REDCOIN_CLI
  dist_man1_MANS+=f44redcoin-cli.1
endif

if BUILD_F44REDCOIN_TX
  dist_man1_MANS+=f44redcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_F44REDCOIN_WALLET
  dist_man1_MANS+=f44redcoin-wallet.1
endif
endif
